the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Tue Aug 14 10:46:47 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Added INSTALLATION document submitted on Linux-8086 mailing
	  list, after reformatting and HTML'ising.

Mon Aug 13 22:58:15 BST 2001	Peter L Vachuska <pvachusk@nconnect.net>

	* Added DVORAK keyboard layout and options.

Mon Aug 13 18:50:50 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Renamed configuration variables such that all such variables
	  that are mentioned in the [Cc]onfig.in files now have names
	  beginning with CONFIG_ as per recommendations. This involved
	  remapping variable names as follows:

	GET_DISKPARAM_BY_INT13_NO_SEEK	CONFIG_HW_NO_SEEK_FOR_FLOPPY
	ROM_8253_100HZ			CONFIG_HW_8253_VALUE_FOR_100HZ
	ROM_ADD_BIOS			CONFIG_ROM_ADD_BIOS_IMAGE
	ROM_BASIS			CONFIG_ROM_BASE
	ROM_BOGOMIPS			CONFIG_BOGOMIPS
	ROM_CHECKSUM_SIZE		CONFIG_ROM_CHECKSUM_SIZE
	ROM_CODE_DEBUG			CONFIG_ROM_DEBUG
	ROM_CONFIG_8253			CONFIG_HW_8253_SYSTEM_CLOCK
	ROM_EXTMEMSIZE			CONFIG_MEM_EXTENDED_MEMORY_SIZE
	ROM_EXT_MOD1			CONFIG_ROM_BIOS_MODULE
	ROM_EXT_MOD1_ADDR		CONFIG_ROM_BIOS_ADDRESS
	ROM_E_SIMULATOR			CONFIG_ROM_USE_SIMULATOR
	ROM_E_SIM_CALL			CONFIG_ROM_SIMULATOR_PROGRAM
	__ROM_EXTMEM			CONFIG_MEM_EXTENDED_MEMORY
	ROM_GETFLOPPY_VIA_INT13		CONFIG_HW_USE_INT13_FOR_FLOPPY
	ROM_HIGH_OF_CRT			CONFIG_HW_VIDEO_LINES_PER_SCREEN
	ROM_KERNEL_CODE			CONFIG_ROM_KERNEL_CODE
	ROM_KERNEL_DATA			CONFIG_ROM_KERNEL_DATA
	ROM_KERNEL_IRQDATA		CONFIG_ROM_IRQ_DATA
	ROM_NOFLOPPY			CONFIG_HW_NO_FLOPPY_DRIVE
	ROM_NOFPU			CONFIG_HW_NO_FPU
	ROM_NOHDD			CONFIG_HW_NO_HARD_DRIVE
	ROM_NOKBDBIOS			CONFIG_HW_NO_KEYBOARD_BIOS
	ROM_NOPS2MOUSE			CONFIG_HW_NO_PS2_MOUSE
	ROM_NOVGA			CONFIG_HW_NO_VGA
	ROM_RESET_ADDR			CONFIG_ROM_RESET_ADDRESS
	ROM_RESET_VEC			CONFIG_ROM_BOOTABLE_BY_RESET
	ROM_SETUP_CODE			CONFIG_ROM_SETUP_CODE